# segmentation

graph-segmentation/: CMakeLists.txt  README.md  segment.cpp
graph-segmentation/include/graph_segment/: segment-image.h
